fix(core): do not check mfa for not yet created ues